--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <version>3.2.5</version>
         <configuration>
           <useModulePath>false</useModulePath>
+          <failOnError>false</failOnError>
+          <doclint>none</doclint>
         </configuration>
       </plugin>
     </plugins>
